--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
 				{% endif %}
                 {% endif %}{% endfor %}
                 <li>
-                    <a href="https://github.com/otavanopisto/kunta-api">Github</a>
+                    <a href="https://github.com/Metatavu">Github</a>
                 </li>
                 <li>
                     <a target="blank" href="{{ "/docs.html" | prepend: site.baseurl }}">Documentation</a>
